update dependencies & fix style

--- a/src/SelectField.styl
+++ b/src/SelectField.styl
@@ -1,6 +1,6 @@
 /**
  * SelectField Component Style for tingle
- * @auther gbk
+ * @author gbk
  *
  * Copyright 2014-2015, Tingle Team, Alinw.
  * All rights reserved.
@@ -9,20 +9,11 @@
 
 topOffset=2px
 
-.tSelectField
-    padding-top topOffset
-    min-height 44px
-.tSelectFieldLabel
-    padding 12px 0
-    width 60px
 .tSelectFieldValue
-    max-width 100%
-    height 20px
-    line-height 20px
-    text-align right
-    > *
-        vertical-align middle
+  padding-right rem(28)
+  > *
+    vertical-align middle
 .tSelectFieldIcon
-    width 14px
-    height 14px
-    fill #999
+  width 14px
+  height 14px
+  fill #999
