--- a/src/SelectField.css
+++ b/src/SelectField.css
@@ -1,23 +1,12 @@
 /**
  * SelectField Component Style for tingle
- * @auther gbk
+ * @author gbk
  *
  * Copyright 2014-2015, Tingle Team, Alinw.
  * All rights reserved.
  */
-.tSelectField {
-  padding-top: 2px;
-  min-height: 44px;
-}
-.tSelectFieldLabel {
-  padding: 12px 0;
-  width: 60px;
-}
 .tSelectFieldValue {
-  max-width: 100%;
-  height: 20px;
-  line-height: 20px;
-  text-align: right;
+  padding-right: 0.373333333333333rem;
 }
 .tSelectFieldValue > * {
   vertical-align: middle;
