--- a/src/SelectField.styl
+++ b/src/SelectField.styl
@@ -7,13 +7,15 @@
  */
 @require '../node_modules/tingle-style/src/var'
 
-topOffset=2px
+topOffset = 2px
 
 .tSelectFieldValue
-  padding-right rem(28)
   > *
     vertical-align middle
+
 .tSelectFieldIcon
-  width 14px
-  height 14px
+  width 24px
+  height 24px
   fill #999
+  margin-right -5px // svg 空隙
+
