--- a/src/SelectField.styl
+++ b/src/SelectField.styl
@@ -10,12 +10,19 @@
 topOffset = 2px
 
 .tSelectFieldValue
-  > *
-    vertical-align middle
+    > *
+        vertical-align middle
 
 .tSelectFieldIcon
-  width 24px
-  height 24px
-  fill #999
-  margin-right -8px // svg 空隙
+    width 24px
+    height 24px
+    fill #999
+    margin-right -8px // svg 空隙
 
+.tSelectFieldPlaceholder
+    top 0
+    left 0
+    max-width 100%
+    height 24px
+    line-height 24px
+    color #bdbdbd
