--- a/src/SelectField.css
+++ b/src/SelectField.css
@@ -14,5 +14,13 @@
   fill: #999;
   margin-right: -8px;
 }
+.tSelectFieldPlaceholder {
+  top: 0;
+  left: 0;
+  max-width: 100%;
+  height: 24px;
+  line-height: 24px;
+  color: #bdbdbd;
+}
 
 /*# sourceMappingURL=SelectField.css.map */
